--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Palindrome Checker</title>
 </head>
 
 <body>
     <main>
-        <input type="text" id="text-input">
-        <button id="check-btn">Check</button>
-        <div id="result">
-
+        
+        <div class="container">
+            <h1>Palindrome Checker</h1>
+            <div class="inner-container">
+                <input type="text" id="text-input">
+                <button id="check-btn">Check</button>
+            
+            <div id="result"></div>
+        </div>
         </div>
     </main>
 
